--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "creditcard": {
+    "sampleproject": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/creditcard",
+            "outputPath": "dist/sampleproject",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -131,10 +131,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "creditcard:build:production"
+              "browserTarget": "sampleproject:build:production"
             },
             "development": {
-              "browserTarget": "creditcard:build:development"
+              "browserTarget": "sampleproject:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -142,7 +142,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "creditcard:build"
+            "browserTarget": "sampleproject:build"
           }
         },
         "test": {
