--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
           "configurations": {
             "production": {
               "baseHref": "/",
-              "outputPath": "dist/document-verifier",
+              "outputPath": "dist/sampleproject",
               "fileReplacements": [{
                 "replace": "src/environments/environment.ts",
                 "with": "src/environments/environment.prod.ts"
@@ -53,7 +53,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "900kb",
                   "maximumError": "1mb"
                 },
                 {
@@ -66,7 +66,7 @@
             },
             "intg": {
               "baseHref": "/",
-              "outputPath": "dist/document-verifier",
+              "outputPath": "dist/sampleproject",
               "fileReplacements": [{
                 "replace": "src/environments/environment.ts",
                 "with": "src/environments/environment.intg.ts"
@@ -92,7 +92,7 @@
             },
             "staging": {
               "baseHref": "/",
-              "outputPath": "dist/document-verifier",
+              "outputPath": "dist/sampleproject",
               "fileReplacements": [{
                 "replace": "src/environments/environment.ts",
                 "with": "src/environments/environment.staging.ts"
@@ -164,6 +164,9 @@
             ],
             "scripts": ["node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.min.js" ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
